--- a/manifest.json
+++ b/manifest.json
@@ -3,17 +3,17 @@
     "name": "Ejemplo PWA",
     "icons": [
         {
-            "src": "images/icon-128x128.png",
+            "src": "./images/icon-128x128.png",
             "sizes": "128x128",
             "type": "image/png"
         },
         {
-            "src": "images/icon-256x256.png",
+            "src": "./images/icon-256x256.png",
             "sizes": "256x256",
             "type": "image/png"
         },
         {
-            "src": "images/icon-512x512.png",
+            "src": "./images/icon-512x512.png",
             "sizes": "512x512",
             "type": "image/png"
         }
